// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UnreadMessageCount Snapshots should match snapshot for desktop viewport (count visible): desktop-viewport-count-visible 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
>
  5
</span>
`;

exports[`UnreadMessageCount Snapshots should match snapshot for large count (99+): large-count-99-plus 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
>
  150
</span>
`;

exports[`UnreadMessageCount Snapshots should match snapshot for mobile viewport (count hidden): mobile-viewport-count-hidden 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
/>
`;

exports[`UnreadMessageCount Snapshots should match snapshot for mobile with large count: mobile-large-count 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
/>
`;

exports[`UnreadMessageCount Snapshots should match snapshot for single count: single-count 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
>
  1
</span>
`;

exports[`UnreadMessageCount Snapshots should match snapshot for zero count: zero-count 1`] = `
<span
  class="absolute top-1 right-1 inline-flex items-center justify-center size-[15px] md:size-[14px] text-[10px] leading-none text-white transform translate-x-1/2 -translate-y-1/2 bg-red-500 rounded-full"
>
  0
</span>
`;
